--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -2,6 +2,4 @@
 @import '~bootstrap/scss/bootstrap';
 
 //Create custom styles for bootstrap elements here
-.card {
-  max-width: 20rem;
-}
+@import './components/card';
