--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -2,4 +2,5 @@
 @import '~bootstrap/scss/bootstrap';
 
 //Create custom styles for bootstrap elements here
-@import './components/card';
+@import 'components/card';
+@import 'hoc/content';
