Add Accordions and react logic to hide/show them
Initial accordion addition

Add popper.js for bootstrap but its not working...

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -3,4 +3,6 @@
 
 //Create custom styles for bootstrap elements here
 @import 'components/card';
+@import 'components/accordion';
+
 @import 'hoc/content';
