--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -3,6 +3,7 @@
 
 //Create custom styles for bootstrap elements here
 @import 'components/card';
+@import 'components/event-card';
 @import 'components/accordion';
 
 @import 'hoc/content';
