Add Container for EventCards that implements state

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -6,4 +6,6 @@
 @import 'components/event-card';
 @import 'components/accordion';
 
+@import 'containers/event-card-container';
+
 @import 'hoc/content';
