added logo and routing

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.active {
+  background-color: Green;
+  color: white;
+}
+.a {
+  color: black; 
+}
