Containerize Kellie's DegreeChanges page add styles

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -6,7 +6,9 @@
 @import 'components/event-card';
 @import "components/notecard";
 @import 'components/accordion';
+@import 'components/navbar';
 
 @import 'containers/event-card-container';
+@import 'containers/degree-changes';
 
 @import 'hoc/content';
