Remove content borders

--- a/src/styles/hoc/_content.scss
+++ b/src/styles/hoc/_content.scss
@@ -1,11 +1,11 @@
 .PageContent {
-  margin: 25px;
+  margin: 25px 10px;
   display: flex;
 
-  .side-panel,
+  .side-panel {
+    margin-right: 10px;
+  }
   .main-content {
-    border: 1px solid #808080;
-    padding: 10px;
   }
 }
 
