Add color palette variables to be used in styles

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-light {
   .navbar-nav {
     .nav-link.active {
-      background-color: Green;
+      background-color: $color-primary-green;
       border-radius: 3px;
       color: #f6f9f8;
       font-weight: 500;
