--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-light {
   .navbar-nav {
     .nav-link.active {
-      background-color: $color-primary-green;
+      background-color: $color-green-1;
       border-radius: 3px;
       color: #f6f9f8;
       font-weight: 500;
