--- a/src/styles/components/_notecard.scss
+++ b/src/styles/components/_notecard.scss
@@ -1,6 +1,5 @@
-.notecard{
-  .card-text{
-    color: green;
-    //border: 1px solid #434c50;
+.notecard {
+  .card-text {
+    //color: green;
   }
 }
