--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -6,6 +6,7 @@
 @import 'components/card';
 @import 'components/event-card';
 @import "components/notecard";
+@import 'components/panel-card';
 @import 'components/accordion';
 @import 'components/navbar';
 
