--- a/src/styles/themes/_colors.scss
+++ b/src/styles/themes/_colors.scss
@@ -32,3 +32,6 @@ $color-brown-1: #696158;
 $color-brown-2: #8c8279;
 $color-grey-1: #a7a8aa;
 $color-grey-2: #D0d0ce;
+$color-grey-3: #eef2f2;
+
+$color-text-gray: #434c50;
