--- a/src/styles/hoc/_content.scss
+++ b/src/styles/hoc/_content.scss
@@ -1,6 +1,7 @@
 .PageContent {
-  margin: 25px 10px;
+  color: $color-text-gray;
   display: flex;
+  margin: 25px 10px;
 
   .side-panel {
     margin-right: 10px;
