--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -10,5 +10,6 @@
 
 @import 'containers/event-card-container';
 @import 'containers/degree-changes';
+@import 'containers/degree-path';
 
 @import 'hoc/content';
