--- a/src/styles/components/_notecard.scss
+++ b/src/styles/components/_notecard.scss
@@ -1,4 +1,20 @@
 .notecard {
+  &.green-1 {
+    border-left: 5px solid $color-green-1;
+  }
+
+  &.red-1 {
+    border-left: 5px solid $color-red-1;
+  }
+  &.yellow-1 {
+    border-left: 5px solid $color-yellow-1;
+  }
+  &.purple-1 {
+    border-left: 5px solid $color-purple-1;
+  }
+  &.blue-1 {
+    border-left: 5px solid $color-blue-1;
+  }
   .card-text {
     //color: green;
   }
