--- a/src/styles/components/_event-card.scss
+++ b/src/styles/components/_event-card.scss
@@ -1,5 +1,6 @@
 .card.event-card {
   flex-direction: row;
+  background-color: $color-grey-4;
   max-width: 75%;
   min-width: 250px;
 
@@ -8,6 +9,7 @@
     margin: 10px;
     max-width: 100px;
     border: 1px solid #eef2f2;
+    background-color: $color-primary-green;
   }
 
   .card-body {
