Add Calendar component with FullCalendar library

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -9,6 +9,7 @@
 @import 'components/panel-card';
 @import 'components/accordion';
 @import 'components/navbar';
+@import 'components/calendar';
 
 @import 'containers/event-card-container';
 @import 'containers/degree-changes';
