--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,6 +1,7 @@
 //Imports pulls in bootstrap for styles to be overridden
 @import '~bootstrap/scss/bootstrap';
 @import './themes/colors';
+@import 'themes/find-my-app';
 
 //Create custom styles for bootstrap elements here
 @import 'components/card';
