--- a/src/styles/components/_panel-card.scss
+++ b/src/styles/components/_panel-card.scss
@@ -12,6 +12,11 @@
     flex-grow: 1;
     padding: 0.7rem;
 
+    > .btn,
+    > .list-group {
+      margin-bottom: 10px;
+    }
+
     > div {
       margin-bottom: 7px;
     }
