Major Quiz page

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -15,5 +15,6 @@
 @import 'containers/event-card-container';
 @import 'containers/degree-changes';
 @import 'containers/degree-path';
+@import 'containers/major-quiz';
 
 @import 'hoc/content';
