Reformat Sign-Up content to get two columns

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -16,5 +16,6 @@
 @import 'containers/degree-changes';
 @import 'containers/degree-path';
 @import 'containers/major-quiz';
+@import 'containers/sign-up';
 
 @import 'hoc/content';
