Changed event image background color

--- a/src/styles/components/_event-card.scss
+++ b/src/styles/components/_event-card.scss
@@ -9,7 +9,7 @@
     margin: 10px;
     max-width: 100px;
     border: 1px solid #eef2f2;
-    background-color: $color-primary-green;
+    background-color: $color-blue-1;
   }
 
   .card-body {
